# rivet

./: .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: clang.yml  gcc.yml  msvc.yml
include/: rivet.hpp
subprojects/: boost.ut.wrap
test/: rivet_test.cpp
